service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-service
  labels:
    app: guestbook
spec:
  selector:
    app: guestbook
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      name: http
